testing/tests/ui/rinja-block.stderr
error: failed to parse template source
 --> <source attribute>:2:6
       " fail %}\n{% endif %}"
 --> tests/ui/rinja-block.rs:5:1
  |
5 | /// Some documentation
  | ^^^^^^^^^^^^^^^^^^^^^^

error: when using `in_doc = true`, the struct's documentation needs a `rinja` code block
  --> tests/ui/rinja-block.rs:15:25
   |
15 | #[template(ext = "txt", in_doc = true)]
   |                         ^^^^^^

error: specify one template argument `path`, `source` or `in_doc`
  --> tests/ui/rinja-block.rs:24:3
   |
24 | #[template(ext = "txt")]
   |   ^^^^^^^^

error: unsupported attribute argument
  --> tests/ui/rinja-block.rs:33:25
   |
33 | #[template(ext = "txt", in_doc)]
   |                         ^^^^^^

error: specify one template argument `path`, `source` or `in_doc`
  --> tests/ui/rinja-block.rs:42:3
   |
42 | #[template(ext = "txt", in_doc = false)]
   |   ^^^^^^^^

error: argument `in_doc` expects as boolean value
  --> tests/ui/rinja-block.rs:51:34
   |
51 | #[template(ext = "txt", in_doc = "yes")]
   |                                  ^^^^^

error: when using `in_doc = true`, the enum's documentation needs a `rinja` code block
  --> tests/ui/rinja-block.rs:60:25
   |
60 | #[template(ext = "txt", in_doc = true)]
   |                         ^^^^^^

error: when using `in_doc = true`, the union's documentation needs a `rinja` code block
  --> tests/ui/rinja-block.rs:67:25
   |
67 | #[template(ext = "txt", in_doc = true)]
   |                         ^^^^^^
